build control component ui buttons

--- a/src/components/Burger/BuildControls/BuildControl/style.css
+++ b/src/components/Burger/BuildControls/BuildControl/style.css
@@ -1,6 +1,6 @@
-.BuildControl {
+/* .BuildControl {
     display: flex;
     justify-content: space-between;
     align-items: center;
     marker: 5px 0;
-}
+} */
