container UX touchups

--- a/src/components/Burger/BuildControls/style.css
+++ b/src/components/Burger/BuildControls/style.css
@@ -1,10 +1,9 @@
 .BuildControls {
     width: 100%;
-    background-color: #CF8F2E;
+    background-color: #058add9a;
     display: flex;
     flex-flow: column;
     align-items: center;
-    box-shadow: 0 2px 1px #ccc;
     margin: auto;
-    padding: 10px 0;
+    padding: 50px 0;
 }
